--- a/priya-mina-final.Rmd
+++ b/priya-mina-final.Rmd
@@ -1,32 +1,48 @@
 ---
-title: "Priya-Mina: Analysis of Temperature and PM 2.5 levels in Tamil Nadu"
+title: "Analysis of Temperature and PM 2.5 levels in rural Tamil Nadu habitations"
 subtitle: "ESPM 157 Final Project"
-date: "December 2023"
-author: "Mina Burns and Priya Riley"
+date: "December 10, 2023"
+author: "Mina Burns,  Priya Riley"
 output:
   html_document:
     df_print: paged
   pdf_document: default
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
-Title: Analysis of Temperature and PM 2.5 levels in Tamil Nadu
+## Analysis of Temperature and PM 2.5 levels in Tamil Nadu
 
-Description of the project: For this project we will use data from Low Cost Sensors in habitations in rural Tamil Nadu to investigate relationships between temperature, humidity and PM 2.5 levels in the region. 
+*Description of the project:* For this project we will use data from Low
+Cost Sensors (LCS) in habitations in rural Tamil Nadu to investigate
+relationships between temperature, humidity and PM 2.5 levels in the
+region.
 
-Data required and how it is obtained:
-Data from low cost sensor network deployed in Tamil Nadu, districts Kallakurichi and Nagapattinam.
-AAM-LASSI dataset. Ambient Air Monitoring of LPG At Scale in South India 
-From Mina’s research with the Center for Occupational and Environmental Health 
+*Data required and how it is obtained:* Data from Low Cost Sensor (LCS)
+network deployed in Tamil Nadu, districts Kallakurichi and Nagapattinam.
+AAM-LASSI dataset. Ambient Air Monitoring of LPG At Scale in South India
+From Mina's research with the Center for Occupational and Environmental
+Health.
 
-Three questions / analysis tasks:
-1) Look at connections between temperature and PM 2.5 in one village in India over a time period of about one year. 
-2) Investigate relationship between humidity and PM 2.5 in one village in India over a time period of about one year. 
-3) Compare the two districts, Kallakurichi and Nagapattinam (coastal and inland, respectively), for PM2.5 measurements. 
+**Three questions / analysis tasks:**
 
---------------------------------------------
-# Preliminary EDA - Priya - using the AQM_Inventory.xlsx
+1)  Look at connections between temperature and PM 2.5 in one village in
+    India over a time period of about one year.
 
-TN? Kallakurichi and Nagapattinam. KK? NP?those exist in the data set so ima say yes.
+2)  Investigate relationship between humidity and PM 2.5 in one village
+    in India over a time period of about one year.
+
+3)  Compare the two districts, Kallakurichi and Nagapattinam (coastal
+    and inland, respectively), for PM2.5 measurements.
+
+------------------------------------------------------------------------
+
+## Preliminary EDA - Priya 
+- using the AQM_Inventory.xlsx
+
+TN? Kallakurichi and Nagapattinam. KK? NP?those exist in the data set so
+ima say yes.
 
 ```{r setup, include=FALSE}
 #Read in packages
@@ -40,12 +56,27 @@ library("ggplot2")
 library("graphics")
 library("readxl")
 library("tidyr")
+library(readr)
+```
+
+### Read in Data
+
+```{r}
+#urlfile <- "https://raw.githubusercontent.com/espm-157/final-group-mina_priya-final/master/dailymeans_outdoor_HH#_cleaned.csv?token=GHSAT0AAAAAACGN2DF6XHPFK3AQW5LIRRAGZLWMMIQ"
+#read_csv(url(urlfile), show_col_types = FALSE)
+
+dailymeans_outdoor_HH_cleaned <- read_csv("dailymeans_outdoor_HH_cleaned.csv", show_col_types = FALSE)
+dailymeans_outdoor_HH_cleaned <- dailymeans_outdoor_HH_cleaned[, -which(names(dailymeans_outdoor_HH_cleaned) == "...1")]
+head(dailymeans_outdoor_HH_cleaned)
 ```
 
 ```{r}
 #read in metadata 
+AQM_Inventory <- read_excel("AQM_Inventory.xlsx")
+head(AQM_Inventory)
+
 metadata <- read_excel("~/Desktop/STEER/AQM_Inventory.xlsx")
-metadata
+head(metadata)
 ```
 
 ```{r}
@@ -53,13 +84,10 @@ metadata
 #Also, I only want to keep rows where the current status is 'Working'.
 filtered_metadata = filter(metadata, `Current Location` == "NP" | `Current Location` == "KK")
 filtered_metadata = filter(filtered_metadata, `Current Status` == "Working")
-filtered_metadata
-
+head(filtered_metadata)
 ```
 
-
-#### Data visualizations using outdoor cleaned data 
-
+#### Data visualizations using outdoor cleaned data
 
 ```{r}
 cleaned_mina_data = read.csv("~/Desktop/STEER/dailymeans_outdoor_HH_cleaned.csv")
@@ -72,7 +100,8 @@ cleaned_mina_data
 unique(cleaned_mina_data$variable)
 ```
 
-Great! Now lets move on to create one table for district KK and one for NP.
+Great! Now lets move on to create one table for district KK and one for
+NP.
 
 ```{r}
 #lets get one table for district KK and one for NP. First, let's do KK. 
@@ -86,17 +115,18 @@ NP_mina_cleaned = filter(cleaned_mina_data, district == "NP")
 NP_mina_cleaned
 ```
 
-Great - all preliminary tables are set up. Now we can explore the data and our questions. Let's begin by exploring district KK.
+Great - all preliminary tables are set up. Now we can explore the data
+and our questions. Let's begin by exploring district KK.
 
 ```{r}
 #For our question, we only need to look at the date, district, variable, mean_of_medians, qa_flag, and da_flag.
 KK_selected_data = select(KK_mina_cleaned, c("date", "district", "variable", "mean_of_medians", "qa_flag", "da_flag"))
 KK_selected_data
 ```
+
 #### Uh oh! it looks like all this data for district KK is in the span of one month. That will not allow us to answer our 3rd research question ! (at least, this alone will not be able to answer it. maybe these plus the missing rds to create a merged table, would allow us to answer the third question. )
 
 ### Moving on to district NP for the first 2 questions.
-
 
 ```{r}
 #For our first two questions, we only need to look at the date, district, variable, and mean_of_medians.
@@ -104,11 +134,15 @@ NP_selected_data = select(NP_mina_cleaned, c("date", "district", "variable", "me
 NP_selected_data
 ```
 
-Above, we see that this data goes only from october to december, which is two months. Thus this limited data set also will not answer our first two questions, but I will do a few graphs regardless. Once we get the full data figured out then I can make graphs for it to fully work. 
+Above, we see that this data goes only from october to december, which
+is two months. Thus this limited data set also will not answer our first
+two questions, but I will do a few graphs regardless. Once we get the
+full data figured out then I can make graphs for it to fully work.
 
-1) Look at connections between temperature and PM 2.5 in one village in India over a time period of about one year. 
+## 1) Look at connections between temperature and PM 2.5 in one village in India over a time period of about one year.
 
 In this case the chosen village is NP: Nagapattinam.
+
 ```{r}
 
 #lets make three columns, for pm2.5, rh, and temp. --> thats hard to do! eek
@@ -127,7 +161,10 @@ filtered_temp = NP_selected_data %>%
   mutate(temp_values = mean_of_medians)
 #filtered_temp
 ```
-When I look at the number of inputs per date, I see that they have different numbers. Therefore I need to make them into an average value per date. 
+
+When I look at the number of inputs per date, I see that they have
+different numbers. Therefore I need to make them into an average value
+per date.
 
 ```{r}
 average_NP_pm2.5 = filtered_pm2.5 %>%
@@ -157,8 +194,8 @@ ggplot() +
 
 ```
 
-This isn't super helpful to me. Lets break it down and see if that helps.
-
+This isn't super helpful to me. Lets break it down and see if that
+helps.
 
 ```{r}
 avg_temp_plot = ggplot() + 
@@ -184,7 +221,8 @@ grid.arrange(avg_temp_plot, avg_pm25_plot, ncol=2)
 
 ```
 
-We can see there are somewhat similar patterns. It looks like temp increases right after pm2.5 increases.
+We can see there are somewhat similar patterns. It looks like temp
+increases right after pm2.5 increases.
 
 ```{r}
 avg_temp_plot_col = ggplot() + 
@@ -205,12 +243,7 @@ grid.arrange(avg_temp_plot_col, avg_pm25_plot_col, ncol=2)
 ###it would be nice to have them as lines instead, on the same plot. work on that tmrw
 ```
 
-
-
-2) Investigate relationship between humidity and PM 2.5 in one village in India over a time period of about one year. 
-```{r}
-
-```
+## 2.) Investigate relationship between humidity and PM 2.5 in one village in India over a time period of about one year.
 
 ```{r}
 
