--- a/priya-mina-final.Rmd
+++ b/priya-mina-final.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Analysis of Temperature and PM 2.5 levels in rural Tamil Nadu habitations"
+title: "Analysis of Temperature and PM2.5 Levels in Rural Tamil Nadu Habitations"
 subtitle: "ESPM 157 Final Project"
-date: "December 10, 2023"
+date: "December 11, 2023"
 author: "Mina Burns,  Priya Riley"
 output:
   html_document:
@@ -12,15 +12,15 @@ editor_options:
     wrap: 72
 ---
 
-## Analysis of Temperature and PM 2.5 levels in Tamil Nadu
+## Analysis of Temperature and PM2.5 levels in Tamil Nadu
 
 *Description of the project:* For this project we will use data from Low
 Cost Sensors (LCS) in habitations in rural Tamil Nadu to investigate
-relationships between temperature, humidity and PM 2.5 levels in the
+relationships between temperature, humidity and PM2.5 levels in the
 region.
 
 *Data required and how it is obtained:* Data from Low Cost Sensor (LCS)
-network deployed in Tamil Nadu, districts Kallakurichi and Nagapattinam.
+network deployed in Tamil Nadu, districts Kallakurichi (KK) and Nagapattinam (NP).
 AAM-LASSI dataset. Ambient Air Monitoring of LPG At Scale in South India
 From Mina's research with the Center for Occupational and Environmental
 Health.
@@ -29,10 +29,10 @@ Health.
 
 # Preliminary EDA - Priya - using the AQM_Inventory.xlsx
 
-1)  Look at connections between temperature and PM 2.5 in one district in
+1)  Look at connections between temperature and PM2.5 in one district in
     India over a time period of about one year.
 
-2)  Investigate relationship between humidity and PM 2.5 in one district
+2)  Investigate relationship between humidity and PM2.5 in one district
     in India over a time period of about one year.
 
 3)  Compare the two districts, Kallakurichi and Nagapattinam (coastal
@@ -40,8 +40,7 @@ Health.
 
 ------------------------------------------------------------------------
 
-## Preliminary EDA - Priya 
-- using the AQM_Inventory.xlsx
+## Preliminary EDA
 
 ```{r setup, include=FALSE}
 #Read in packages
@@ -65,30 +64,21 @@ library("readr")
 #read_csv(url(urlfile), show_col_types = FALSE)
 
 #read the csv into r. The csv covers ambient and household emissions data in Tamil Nadu, India.
-
-<<<<<<< HEAD
-#### Data Visualizations using Outdoor Cleaned Data
-=======
 dailymeans_outdoor_emissons <- read_csv("dailymeans_outdoor_HH_cleaned.csv", show_col_types = FALSE)
 dailymeans_outdoor_emissions <- dailymeans_outdoor_emissons[, -which(names(dailymeans_outdoor_emissons) == "...1")]
 head(dailymeans_outdoor_emissions)
 ```
 
-<<<<<<< HEAD
 #### Cleaning and Preparing Data
-=======
-#### Data visualizations using outdoor cleaned data
->>>>>>> ff14a1a7d074fd26b2ffab866fd0726bb9d64550
->>>>>>> f5be6b3e029b45b544609194955f7f505cd1befd
 
 ```{r}
 #filter where the qa_flags and da_flags are above 0, which means they have been flagged for an error.
 cleaned_data = filter(dailymeans_outdoor_emissions, qa_flag == "0" & da_flag == "0")
-head(cleaned_data)
+cleaned_data
 ```
 
 ```{r}
-#real quick, let's make sure that all variables are either humidity (rh), temperature (temp), or pm2.5
+#real quick, let's make sure that all variables are either humidity (rh), temperature (temp), or PM2.5
 unique(cleaned_data$variable)
 ```
 
@@ -109,23 +99,23 @@ We will use district NP for the first 2 questions.
 ```{r}
 #For our first two questions, we only need to look at the date, district, variable, and mean_of_medians.
 NP_selected_data = select(NP_cleaned_emissions, c("date", "district", "variable", "mean_of_medians"))
-head(NP_selected_data)
+head(NP_selected_data,10)
 ```
+Above, we've shown the first 10 rows, which encompasses all data for October 28th, 2021. It is important to note that the variables have different amounts of inputs. For example, we can see that there are four rows for PM2.5, and three rows for both temp and rh. ????????????????? THIS IS BECAUSE WHY? ARE THERE MULTIPLE SENSORS???????
 
+## 1) Look at connections between temperature and PM2.5 in one district in India over a time period of about one year.
 
-## 1) Look at connections between temperature and PM 2.5 in one district in India over a time period of about one year.
-
-In this case the chosen district is NP: Nagapattinam.
+In this case our chosen district is NP: Nagapattinam. This is a district in Tamil Nadu, India.
 
 ```{r}
-#lets make columns for temp and pm2.5
+#lets make new tables with columns for temp and PM2.5. Below, we show what these look like through the PM2.5 table.
 
 filtered_pm2.5 = NP_selected_data %>%
   filter(variable == "pm2.5") %>%
   arrange(date, district) %>%
   mutate(pm2.5_values = mean_of_medians) %>%
   select("date","district","variable","pm2.5_values")
-head(filtered_pm2.5)
+head(filtered_pm2.5, 10)
 
 filtered_temp = NP_selected_data %>%
   filter(variable == "temp") %>%
@@ -135,21 +125,21 @@ filtered_temp = NP_selected_data %>%
 #head(filtered_temp) 
 ```
 
-When I look at the number of inputs per date, I see that they have different numbers. Therefore I need to make them into an average value per date. 
+From this PM2.5 table above, we can see that each day contains differing amounts of data. Furthermore, as described above, each day had differing amounts of data per variable. As such, it will be easier to compare between variables and between dates if we summarize each day by taking the average PM2.5, temp, and so on. 
 
 ```{r}
+#obtaining the average PM2.5 values per day
 average_NP_pm2.5 = filtered_pm2.5 %>%
   group_by(date) %>%
   summarise(avg_pm2.5 = mean(pm2.5_values))
 head(average_NP_pm2.5)
 ```
 
-
 ```{r}
+#obtaining the average temp values per dat
 average_NP_temp = filtered_temp %>%
   group_by(date) %>%
   summarise(avg_temp = mean(temp_values))
-
 head(average_NP_temp)
 ```
 
@@ -159,19 +149,19 @@ Awesome. I now have tables with the average values of temp or PM2.5 per day. Now
 ggplot() + 
   geom_point(data = average_NP_pm2.5, aes(x= date, y = avg_pm2.5), color = "lightblue") +
   geom_point(data = average_NP_temp, aes(x= date, y= avg_temp), color = "coral") +
-  ggtitle("Avg Temperature and PM 2.5 Concentrations per Day") + 
+  ggtitle("Avg Temperature and PM2.5 Concentrations per Day") + 
   labs(x= "Date", y = "Mean Values") +
   scale_x_date(date_labels = "%Y-%m-%d", date_breaks = "1 month") + 
   scale_y_continuous(breaks = seq(0, 100, 15)) + 
   theme_bw() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
 ```
 
 This is a plot with the average temperatures plotted over the average PM2.5 concentrations.
-The makeup of this graph isn't super helpful to me. Lets break it down and see if that helps.
+The makeup of this graph isn't super helpful to me because the scales are pretty different. Lets break it down and see if that helps.
 
 ```{r}
+#plot avg temperature per day alone
 avg_temp_plot = ggplot() + 
   geom_point(data = average_NP_temp, aes(x=date, y=avg_temp), color = "coral") +
   ggtitle("Avg Temperature Values per Day") + 
@@ -188,19 +178,16 @@ Above, the Avg Temperatures per Day plot shows that the temps fluctuate up and d
 ```{r}
 avg_pm25_plot = ggplot() + 
   geom_point(data = average_NP_pm2.5, aes(x=date, y = avg_pm2.5), color = "lightblue") +
-  ggtitle("Avg PM 2.5 Concentrations per Day") + 
+  ggtitle("Avg PM2.5 Concentrations per Day") + 
   labs(x= "Date", y = "Mean Values") +
   scale_x_date(date_labels = "%Y-%m-%d", date_breaks = "2 month") + 
   scale_y_continuous(breaks = seq(0, 100, 15)) + 
   theme_bw() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-
 avg_pm25_plot
 ```
 
-We see from the average PM2.5 concentrations per day plot that lower PM 2.5 concentrations occur from 2022-04 to 2022-09 (or April - September in 2022), and 2022-07 (July) in 2023 which is interesting. Let's look at these plots next to eachother so that we can compare temperature and PM2.5.
-
+From our plot above, we see that lower levels of PM2.5 concentrations occur from 2022-04 to 2022-09 (or April - September in 2022), and 2022-07 (July) in 2023 which is interesting. Let's look at these plots next to each other so that we can compare temperature and PM2.5.
 
 ```{r}
 #the graphs next to each other
@@ -208,7 +195,9 @@ require(gridExtra)
 grid.arrange(avg_temp_plot, avg_pm25_plot, ncol=2)
 ```
 
-From the graphs above, for temperature, we can see that the months of April (2022-04) - July (2022-07) experience higher temperatures. This makes sense because these are summer months in India. Meanwhile, the months of December (2022-12) to March (2023-03) experience lower temperatures, which coincides with the winter months. Meanwhile, we can see that peak PM2.5 concentrations occur from December (2022-12) to March (2023-03), which also generally aligns with colder months. This makes sense, as the PM2.5 measurements are taken from sensors that are placed near village homes for the purpose of detecting PM2.5 from cook stoves. During winter months, cook stoves are used more often for warmth and for heating food, thus it makes sense that higher PM2.5 concentrations occur during colder months. Likewise, it makes sense that lower PM2.5 concentrations are recorded during times of higher temperatures; there is overlap from the higher temperatures from 2022-05 to 2022-07, with lower PM2.5 concentrations at the same time. 
+From the graphs above, for temperature, we can see that the months of April (2022-04) - July (2022-07) experience higher temperatures. This makes sense because these are summer months in Tamil Nadu. On the other hand, the months of December (2022-12) to March (2023-03) experience lower temperatures, which coincides with the winter months of Tamil Nadu, India. Meanwhile, we can see that peak PM2.5 concentrations occur from December (2022-12) to March (2023-03), which also generally aligns with colder months. 
+
+This makes sense, as the PM2.5 measurements are taken from sensors that are placed near village homes for the purpose of detecting PM2.5 from cook stoves. During winter months, cook stoves are used more often for warmth and for heating food, thus it makes sense that higher PM2.5 concentrations occur during colder months. Likewise, it makes sense that lower PM2.5 concentrations are recorded during times of higher temperatures; there is overlap from the higher temperatures from 2022-05 to 2022-07, with lower PM2.5 concentrations at the same time. 
 
 ```{r}
 avg_temp_plot_line = ggplot() + 
@@ -222,7 +211,7 @@ avg_temp_plot_line = ggplot() +
 
 avg_pm25_plot_line = ggplot() + 
   geom_line(data = average_NP_pm2.5, aes(x = date, y = avg_pm2.5, group = 1), color = "lightblue3") +
-  ggtitle("Avg PM 2.5 concentrations per day") + 
+  ggtitle("Avg PM2.5 concentrations per day") + 
   labs(x= "Date", y = "Mean Values") +
   scale_x_date(date_labels = "%Y-%m-%d", date_breaks = "2 month") + 
   scale_y_continuous(breaks = seq(0, 100, 15)) + 
@@ -242,7 +231,7 @@ This plot lets us see the general trend that higher temps connect with lower PM2
 combined_plot <- ggplot() +
   geom_line(data = average_NP_temp, aes(x = date, y = avg_temp, group = 1), color = "coral") +
   geom_line(data = average_NP_pm2.5, aes(x = date, y = avg_pm2.5, group = 1), color = "lightblue3") +
-  ggtitle("Avg Temperature and PM 2.5 Concentrations per Day") +
+  ggtitle("Avg Temperature and PM2.5 Concentrations per Day") +
   labs(x = "Date", y = "PM2.5 Mean Values") +
   scale_x_date(date_labels = "%Y-%m-%d", date_breaks = "2 month") +
   scale_y_continuous(
@@ -262,11 +251,12 @@ combined_plot
 This graph includes both variables in the same plot. It was difficult to scale so it did not end up being as helpful as we hoped.
 
 
-##### Temp and PM 2.5 Analysis by Month.
+###### Temp and PM2.5 Analysis by Month.
 Doing similar analysis, but grouping by month. 
 
 ```{r}
-# I will also find the averages per month, for both variables. This might allow me to the relationship between temperature and pm2.5 in a different way. 
+# I will also find the averages per month, for both variables. This might allow me to the relationship between temperature and PM2.5 in a different way. 
+
 library("tidyverse")
 average_NP_pm2.5_monthly = filtered_pm2.5 %>%
   group_by(month = lubridate::floor_date(date, 'month')) %>%
@@ -284,7 +274,7 @@ head(average_NP_pm2.5_monthly)
 combined_plot_monthly <- ggplot() +
   geom_line(data = average_NP_temp_monthly, aes(x = month, y = avg_monthly_temp, group = 1), color = "coral") +
   geom_line(data = average_NP_pm2.5_monthly, aes(x = month, y = avg_monthly_pm2.5, group = 1), color = "lightblue3") +
-  ggtitle("Avg Temperature and PM 2.5 Concentrations per Month") +
+  ggtitle("Avg Temperature and PM2.5 Concentrations per Month") +
   labs(x = "Date", y = "PM2.5 Mean Monthly Values") +
   scale_x_date(date_labels = "%Y-%m-%d", date_breaks = "1 month") +
   scale_y_continuous(
@@ -304,7 +294,7 @@ combined_plot_monthly
 #can delete lol
 ```
 LOLLLLLLLLLL
-although - it does let us see that higher temps relate with lower pm2.5, and lower temps relate with higher pm2.5.
+although - it does let us see that higher temps relate with lower PM2.5, and lower temps relate with higher PM2.5.
 
 
 ```{r}
@@ -320,7 +310,7 @@ avg_temp_plot_col_monthly = ggplot() +
 
 avg_pm25_plot_col_monthly = ggplot() + 
   geom_col(data = average_NP_pm2.5_monthly, aes(x = month, y = avg_monthly_pm2.5, group = 1), fill = "lightblue3") +
-  ggtitle("Avg PM 2.5 Concentrations per Month") + 
+  ggtitle("Avg PM2.5 Concentrations per Month") + 
   labs(x= "Date", y = "Mean Values") +
   scale_x_date(date_labels = "%Y-%m-%d", date_breaks = "2 month") +
   scale_y_continuous(breaks = seq(0, 100, 15)) + 
@@ -330,17 +320,19 @@ avg_pm25_plot_col_monthly = ggplot() +
 require(gridExtra)
 grid.arrange(avg_temp_plot_col_monthly, avg_pm25_plot_col_monthly, ncol=2)
 ```
-This is a graph that further averages values by month. This helps us see the average monthly lowest and highest temps and PM 2.5 concentrations. 
+
+This is a graph that further averages values by month. This helps us see the average monthly lowest and highest temps and PM2.5 concentrations. 
 Highest temperatures occur from 03-06 in 2022 and 03 to 08 in 2023. 
 Lowest PM2.5 concentrations occur from 04-09 in 2022 and 06-08 in 2023. 
 
 
-## 2.) Investigate relationship between humidity and PM 2.5 in one village in India over a time period of about one year.
+## 2.) Investigate relationship between humidity and PM2.5 in one village in India over a time period of about one year.
 
-Background on humidity in Tamil Nadu, India: The most humid month of the year is November with humidity varies from 59.1% to 96.9%. The least humid month is of the year is June, with humidity varies from 41.7% to 87.0%.
+Background on humidity in Tamil Nadu, India: 
+The most humid month of the year is November, with humidity varies from 59.1% to 96.9%. The least humid month is of the year is June, with humidity varies from 41.7% to 87.0% (indianclimate.com).
 
 ```{r}
-#From the first question, I already have filtered and cleaned data for pm2.5. Now let's do the same for humidity. 
+#From the first question, I already have filtered and cleaned data for PM2.5. Now let's do the same for humidity. 
 
 filtered_rh = NP_selected_data %>%
   filter(variable == "rh") %>% #'rh' stands for registered humidity
@@ -362,20 +354,21 @@ head(average_NP_rh)
 ggplot() + 
   geom_point(data = average_NP_pm2.5, aes(x= date, y = avg_pm2.5), color = "lightblue") +
   geom_point(data = average_NP_rh, aes(x= date, y= avg_rh), color = "gold2") +
-  ggtitle("Avg Humidity and PM 2.5 Concentrations per Day") + 
+  ggtitle("Avg Humidity and PM2.5 Concentrations per Day") + 
   labs(x= "Date", y = "Mean Values") +
   scale_x_date(date_labels = "%Y-%m-%d", date_breaks = "1 month") + 
   scale_y_continuous(breaks = seq(0, 100, 15)) + 
   theme_bw() + 
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
-It looks like humidity and PM 2.5 follow somewhat similar patterns. When PM2.5 rises during the Winter, humidity also seems to rise during Fall through Winter. When PM 2.5 has a decreasing trend starting in 2021-10 and going to 2022-07, humidity also has a decreasing trend. 
+
+It looks like humidity and PM2.5 follow somewhat similar patterns. When PM2.5 rises during the Winter, humidity also seems to rise around the same time (during Fall through Winter). When PM2.5 has a decreasing trend starting in 2021-10 and going to 2022-07, humidity also has a decreasing trend. 
 
 
 ```{r}
 avg_rh_plot = ggplot() + 
   geom_point(data = average_NP_rh, aes(x=date, y=avg_rh), color = "gold2") +
-  ggtitle("Avg humidity values per day") + 
+  ggtitle("Avg Humidity Values per Day") + 
   labs(x= "Date", y = "Mean Values") +
   scale_x_date(date_labels = "%Y-%m-%d", date_breaks = "2 month") + 
   theme_bw() + 
@@ -383,26 +376,27 @@ avg_rh_plot = ggplot() +
 
 avg_rh_plot
 ```
+These graphs allow us to look at the two plots more closely. From 2021-11 to 2022-05, humidity experiences a decreasing general trend. Its highest values seem to be around 2022-09 to 2023-02, which are the colder months.
 
 ```{r}
 avg_pm25_plot
 ```
 
-These graphs allow us to look at the two plots more closely. From 2021-11 to 2022-05, humidity experiences a decreasing general trend. Its highest values seem to be around 2022-09 to 2023-02, which are the colder months. Meanwhile, from 2021-11 to 2022-07, PM 2.5 experiences a general decreasing trend. Its highest values seem to be around 2021-11 to 2022-01, and 2022-11 to 2023-01. This coincides with typically colder months. 
+From 2021-11 to 2022-07, PM2.5 experiences a general decreasing trend. Its highest values seem to be around 2021-11 to 2022-01, and 2022-11 to 2023-01. This coincides with typically colder months. 
 
 ```{r}
 #the graphs next to each other
 require(gridExtra)
 grid.arrange(avg_rh_plot, avg_pm25_plot, ncol=2)
 ```
-We can see that humidity and PM2.5 concentrations seem to be somewhat correlated. Higher humidity values seem to also correspond to higher PM2.5 concentrations. This makes sense because in Tamil Nadu, India, the more humid months occur during the colder months - so when cookstoves are more likely to be used, it also happens to be humid. 
 
+We can see that humidity and PM2.5 concentrations seem to be somewhat correlated. Higher humidity values seem to also correspond to higher PM2.5 concentrations. This makes sense because in Tamil Nadu, India, the more humid months occur during the colder months - so when cook stoves are more likely to be used when it's cold, it also happens to be humid. 
 
 ```{r}
 rh_and_pm2.5_plot <- ggplot() +
   geom_line(data = average_NP_rh, aes(x = date, y = avg_rh, group = 1), color = "gold2") +
   geom_line(data = average_NP_pm2.5, aes(x = date, y = avg_pm2.5, group = 1), color = "lightblue3") +
-  ggtitle("Avg Humidity and PM 2.5 Concentrations per Day") +
+  ggtitle("Avg Humidity and PM2.5 Concentrations per Day") +
   labs(x = "Date", y = "PM2.5 Mean Values") +
   scale_x_date(date_labels = "%Y-%m-%d", date_breaks = "2 month") +
   scale_y_continuous(
@@ -418,4 +412,12 @@ rh_and_pm2.5_plot <- ggplot() +
 
 rh_and_pm2.5_plot
 ```
-Again, we see the general trend. 
+Again, we see the general trends are similar.
+
+We should note that there a potential complexity with the data. Though it could make sense that humidity and PM2.5 are this closely aligned, because Tamil Nadu typically truly does humidity during colder months, it is also possible that the sensor has some inaccuracies. These measurements were collected from a Low Cost Sensor (LCS) network deployed in Tamil Nadu, in districts Kallakurichi (KK) and Nagapattinam (NP). ???????????????????????????????????? While these low cost sensors do tend to be accurate, they are not built specifically for humidity, especially for recording higher values of humidity. As such, we would like to note that it is possible that there should be some caution when it comes to claiming how similar humidity and PM2.5 truly are.  
+
+```{r}
+require(gridExtra)
+grid.arrange(avg_temp_plot, avg_rh_plot, avg_pm25_plot, ncol=3)
+```
+Lastly, here are all three variables plotted together. We can see that temperature is somewhat inversely relational with humidity and PM2.5. Higher temperatures coincide with lower humidity and PM2.5 values, and vice versa. This is backed up by [Ding et al. 2021](https://pubmed.ncbi.nlm.nih.gov/34708953/).
